@@ -1,3 +1,9 @@
+2014-10-18  Kenneth Loafman  <kenneth@loafman.com>
+
+    * Merged in lp:~johnleach/duplicity/1315437-swift-container-create
+      - Check to see if the swift container exists before trying to create it,
+        in case we don't have permissions to create containers. Fixes #1315437
+
 2014-10-16  Kenneth Loafman  <kenneth@loafman.com>
 
     * Merged in lp:~ed.so/duplicity/0.7-dpbx.importfix
